// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should contain progress-bar-inner-text css class when text inside is set true 1`] = `
<scale-progress-bar text-inside="true">
  <mock:shadow-root>
    <style>
      .progress-bar-0-0-71 {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar__outer-0-0-72 {
  width: 400px;
  height: 6px;
  margin: 12px 12px 12px 0;
  overflow: hidden;
  position: relative;
  background: #ebeef5;
  border-radius: 100px;
}
.progress-bar__inner-0-0-73 {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  transition: width 0.5s ease-in-out;
  align-items: center;
  white-space: nowrap;
  border-radius: 100px;
  justify-content: flex-end;
}
.progress-bar__inner-text-0-0-74 {
  color: #fff;
  padding: 0 12px;
  font-size: 12px;
}
.progress-bar__text-0-0-75 {
  color: #606266;
  display: inline-block;
  font-size: 14px;
}
.progress-bar--variant-brand-0-0-76 {
  background: #0039cb;
}
.progress-bar--variant-error-0-0-77 {
  background: #bb002f;
}
.progress-bar--variant-warning-0-0-78 {
  background: #c79400;
}
.progress-bar--variant-info-0-0-79 {
  background: #0081cb;
}
.progress-bar--variant-success-0-0-80 {
  background: #00b248;
}
    </style>
    <div class="progress-bar-0-0-71">
      <div class="progress-bar__outer-0-0-72" style="height: 6px;">
        <div class="progress-bar-0-0-71 progress-bar__inner-0-0-73" style="width: undefined%;">
          <div class="progress-bar__inner-text-0-0-74">
            undefined%
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should contain progress-bar-text css class when show text is set true 1`] = `
<scale-progress-bar show-text="true">
  <mock:shadow-root>
    <style>
      .progress-bar-0-0-51 {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar__outer-0-0-52 {
  width: 400px;
  height: 6px;
  margin: 12px 12px 12px 0;
  overflow: hidden;
  position: relative;
  background: #ebeef5;
  border-radius: 100px;
}
.progress-bar__inner-0-0-53 {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  transition: width 0.5s ease-in-out;
  align-items: center;
  white-space: nowrap;
  border-radius: 100px;
  justify-content: flex-end;
}
.progress-bar__inner-text-0-0-54 {
  color: #fff;
  padding: 0 12px;
  font-size: 12px;
}
.progress-bar__text-0-0-55 {
  color: #606266;
  display: inline-block;
  font-size: 14px;
}
.progress-bar--variant-brand-0-0-56 {
  background: #0039cb;
}
.progress-bar--variant-error-0-0-57 {
  background: #bb002f;
}
.progress-bar--variant-warning-0-0-58 {
  background: #c79400;
}
.progress-bar--variant-info-0-0-59 {
  background: #0081cb;
}
.progress-bar--variant-success-0-0-60 {
  background: #00b248;
}
    </style>
    <div class="progress-bar-0-0-51">
      <div class="progress-bar__outer-0-0-52" style="height: 6px;">
        <div class="progress-bar-0-0-51 progress-bar__inner-0-0-53" style="width: undefined%;"></div>
      </div>
      <div class="progress-bar__text-0-0-55">
        undefined%
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should have css property width 24px when stroke width is set to 24 1`] = `
<scale-progress-bar stroke-width="24">
  <mock:shadow-root>
    <style>
      .progress-bar-0-0-31 {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar__outer-0-0-32 {
  width: 400px;
  height: 6px;
  margin: 12px 12px 12px 0;
  overflow: hidden;
  position: relative;
  background: #ebeef5;
  border-radius: 100px;
}
.progress-bar__inner-0-0-33 {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  transition: width 0.5s ease-in-out;
  align-items: center;
  white-space: nowrap;
  border-radius: 100px;
  justify-content: flex-end;
}
.progress-bar__inner-text-0-0-34 {
  color: #fff;
  padding: 0 12px;
  font-size: 12px;
}
.progress-bar__text-0-0-35 {
  color: #606266;
  display: inline-block;
  font-size: 14px;
}
.progress-bar--variant-brand-0-0-36 {
  background: #0039cb;
}
.progress-bar--variant-error-0-0-37 {
  background: #bb002f;
}
.progress-bar--variant-warning-0-0-38 {
  background: #c79400;
}
.progress-bar--variant-info-0-0-39 {
  background: #0081cb;
}
.progress-bar--variant-success-0-0-40 {
  background: #00b248;
}
    </style>
    <div class="progress-bar-0-0-31">
      <div class="progress-bar__outer-0-0-32" style="height: 24px;">
        <div class="progress-bar-0-0-31 progress-bar__inner-0-0-33" style="width: undefined%;"></div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should match snapshot 1`] = `
<scale-progress-bar>
  <mock:shadow-root>
    <style>
      .progress-bar-0-0-11 {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar__outer-0-0-12 {
  width: 400px;
  height: 6px;
  margin: 12px 12px 12px 0;
  overflow: hidden;
  position: relative;
  background: #ebeef5;
  border-radius: 100px;
}
.progress-bar__inner-0-0-13 {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  transition: width 0.5s ease-in-out;
  align-items: center;
  white-space: nowrap;
  border-radius: 100px;
  justify-content: flex-end;
}
.progress-bar__inner-text-0-0-14 {
  color: #fff;
  padding: 0 12px;
  font-size: 12px;
}
.progress-bar__text-0-0-15 {
  color: #606266;
  display: inline-block;
  font-size: 14px;
}
.progress-bar--variant-brand-0-0-16 {
  background: #0039cb;
}
.progress-bar--variant-error-0-0-17 {
  background: #bb002f;
}
.progress-bar--variant-warning-0-0-18 {
  background: #c79400;
}
.progress-bar--variant-info-0-0-19 {
  background: #0081cb;
}
.progress-bar--variant-success-0-0-20 {
  background: #00b248;
}
    </style>
    <div class="progress-bar-0-0-11">
      <div class="progress-bar__outer-0-0-12" style="height: 6px;">
        <div class="progress-bar-0-0-11 progress-bar__inner-0-0-13" style="width: undefined%;"></div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;
